--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>morph-gallery-showcase</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>Galeri-Hexa</title>
+    <meta name="description" content="Galeri Hexa" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="morph-gallery-showcase" />
-    <meta property="og:description" content="Hexa Demo Gallery" />
+    <meta property="og:title" content="Galeri-Hexa" />
+    <meta property="og:description" content="Galeri-Hexa" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://demo.hexaintegra.com/images/logos/logo_hexa.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="galeri_hexa" />
+    <meta name="twitter:image" content="https://demo.hexaintegra.com/images/logos/logo_hexa.png" />
   </head>
 
   <body>
